k8s/ingresses/ingress-with-microservice.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress  
metadata:  
  name: library-monolith-ms-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:  
  rules:
  - host: www.library.com
    http:
      paths:
      - path: /api/v1/books
        pathType: ImplementationSpecific
        backend:
          service:
              name: monolith
              port:
                number: 8080
      - path: /api/v1/users/.*/comments
        pathType: ImplementationSpecific
        backend:
          service:
              name: monolith 
              port:
                number: 8080
      - path: /api/v1/users
        pathType: ImplementationSpecific
        backend:
          service:
              name: userms
              port:
                number: 8090
